--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,9 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   NewCops: enable
-  TargetRubyVersion: 3
+  TargetRubyVersion: 3.2
+  Exclude:
+    - sorbet/**/*.rbi
 
 Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
