--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@
 /pkg/
 /spec/reports/
 /tmp/
-
-# rspec failure tracking
-.rspec_status
-
 /sorbet/cache
 !/sorbet/cache/.keep
+*.gem
+.rspec_status
