--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
   Exclude:
     - sorbet/**/*.rbi
     - vendor/**/*
+    - gemfiles/**/*
 
 Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
